Create edit-menu directive to share across templates

--- a/client/app/scss/modules/_shared.scss
+++ b/client/app/scss/modules/_shared.scss
@@ -1,6 +1,6 @@
 input.ac-button,
 .ac-button {
-    background: #4D5CF9;
+    background: $primary-color;
     border-radius: 1px;
     color: white;
     font-size: 0.8em;
