--- a/client/app/scss/pages/_admin-interviews-dashboard.scss
+++ b/client/app/scss/pages/_admin-interviews-dashboard.scss
@@ -20,15 +20,19 @@
         border-radius: 3px;
         background: white;
         box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-        margin-bottom: gutter(susy-get(columns));
-        @include gallery(3 of 12);
+
+
+        @include span(4 of 12);
+
+        // Responsive Breakpoints
         @include breakpoint(md) {
-            @include gallery(4 of 12);
+            @include span(6 of 12);
         }
+
         @include breakpoint(sm) {
-            @include gallery(12 of 12);
-            float: none;
+            @include span(12 of 12);
         }
+    
         &--hero {
             height: 197px;
             background-image: url('https://s-media-cache-ak0.pinimg.com/736x/07/9a/fc/079afcb7465382ff8d62a19015938ed4.jpg');
