--- a/client/app/scss/layout/_nav-navigation.scss
+++ b/client/app/scss/layout/_nav-navigation.scss
@@ -1,7 +1,7 @@
 // ADMIN
-// 
+
 .nav {
-    background: $navbar-admin-color;
+    background: $primary-color;
     box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.14), 0px 2px 2px 0px rgba(0, 0, 0, 0.098), 0px 1px 5px 0px rgba(0, 0, 0, 0.084);
     height: 70px;
     position: fixed;
@@ -118,17 +118,19 @@
     left: 0;
     max-width: 75%;
     margin: 0 auto;
-    
+
     &__wrapper {
         margin-top: 0px;
         padding: 20px 0;
         background: white;
         box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+
+        > .container {
+            @include container(95%);
+        }
     }
 
-    &.container {
-        @include container(90%);
-    }
+    
 
     nav {
         @include display(flex);
